@@ -15,6 +15,8 @@
         <news>
 6.1.0
 [add] Refresh after watching
+[add] Completed Live
+[add] Upcoming Live
         </news>
         <assets>
             <icon>icon.png</icon>
