@@ -79,7 +79,7 @@ def _process_disliked_videos(provider, context, re_match):
     return result
 
 
-def _process_live_events(provider, context, re_match):
+def _process_live_events(provider, context, re_match, event_type='live'):
     def _sort(x):
         return x.get_aired()
 
@@ -89,7 +89,7 @@ def _process_live_events(provider, context, re_match):
 
     # TODO: cache result
     page_token = context.get_param('page_token', '')
-    json_data = provider.get_client(context).get_live_events(event_type='live', page_token=page_token)
+    json_data = provider.get_client(context).get_live_events(event_type=event_type, page_token=page_token)
     if not v3.handle_error(provider, context, json_data):
         return False
     result.extend(v3.response_to_items(provider, context, json_data, sort=_sort, reverse_sort=True))
@@ -317,6 +317,10 @@ def process(category, provider, context, re_match):
         return _process_disliked_videos(provider, context, re_match)
     elif category == 'live':
         return _process_live_events(provider, context, re_match)
+    elif category == 'upcoming_live':
+        return _process_live_events(provider, context, re_match, event_type='upcoming')
+    elif category == 'completed_live':
+        return _process_live_events(provider, context, re_match, event_type='completed')
     elif category == 'description_links':
         return _process_description_links(provider, context, re_match)
     else:
